Bug 771720 - Improve GC data collection (r=terrence)